# EdgeKV

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: ansicolor_sink-inl.h.C0F4A36EB7ACA4C8.idx  ansicolor_sink.h.4968CB9C72BDB006.idx  async.cpp.54508641DE243AD4.idx  async.h.9BF7DA89A12278C5.idx  async_logger-inl.h.D65FE5430E9133E6.idx  async_logger.h.68E255C835DF83FA.idx  backtracer-inl.h.B1B8E06D31340D81.idx  backtracer.h.83652EAEA38F1B27.idx  base_sink-inl.h.C3ED6DBA3FA79C6E.idx  base_sink.h.22100CDB5E2DC2E7.idx  basic_file_sink-inl.h.F8A52580B9878143.idx  basic_file_sink.h.5B0F3EF8D90F3E61.idx  bundled_fmtlib_format.cpp.DB3BAC7E715D7386.idx  cfg.cpp.5D0F924388AFD949.idx  circular_q.h.52D3BEBEEDAD1521.idx  color_sinks.cpp.6BA222D9CCC60999.idx  common-inl.h.BF6F4EFCDD3AE511.idx  common.h.1F1E9D172EDB754A.idx  console_globals.h.A67F5D94CB914379.idx  core.h.A9A83DF15124BB6D.idx  datacenterKV.cpp.8B764799F3E88B79.idx  edgeKV.cpp.DA4F1721C342F6F6.idx  file_helper-inl.h.8CA254F9E0003458.idx  file_helper.h.0124FCAC269AA9BF.idx  file_sinks.cpp.5A3CF54989220BC7.idx  fmt.h.94CC4F6A3C61592B.idx  fmt_helper.h.FA17EE208D56325E.idx  format-inl.h.4A37C726248BDA12.idx  format.h.52E2F59D927E929C.idx  formatter.h.C840A4F1FE5F108E.idx  helpers-inl.h.B1836B5D83D5AD06.idx  helpers.h.031D2F82E31054AF.idx  leveldb.cpp.15B1E7FA30866C84.idx  leveldb.h.BEBB8256721B83CA.idx  log_msg-inl.h.783FF96876780A23.idx  log_msg.h.D46221E1DAB2C26D.idx  log_msg_buffer-inl.h.6BE24753C5CB349D.idx  log_msg_buffer.h.0199EEABC4CF1ABD.idx  logger-inl.h.AF00018B45157479.idx  logger.h.1CC9FEA6F15E9B63.idx  (+28 more)
include/datacenter/: server.h
include/edge/: EdgeService.h  S3FIFO.h  client.h
include/utill/: HttpService.pb.h  KVService.pb.h  UpdateClient.pb.h  leveldb.h  utill.h
proto/: HttpService.proto  KVService.proto  UpdateClient.proto
src/: datacenterKV.cpp  edgeKV.cpp
src/datacenter/: server.cpp
src/edge/: EdgeService.cpp  S3FIFO.cpp  client.cpp  edgeKV.cpp
src/utill/: HttpService.pb.cc  KVService.pb.cc  UpdateClient.pb.cc  leveldb.cpp
test/: test_client.cpp  test_edgeKV.cpp  test_leveldb.cpp
